View Issue Details

IDProjectCategoryView StatusLast Update
0032970Open CASCADEOCCT:Visualizationpublic2023-03-19 23:20
Reporterkgv Assigned Tovpozdyayev 
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.7.0 
Target Version7.7.0Fixed in Version7.6.3 
Summary0032970: Visualization, TKOpenGl - fix compilation on Linux: 'False' was not declared
DescriptionThe following error should be fixed:
/occt.git/src/OpenGl/OpenGl_Context.cxx:1821: error: ‘False’ was not declared in this scope
../../../../src/OpenGl/OpenGl_Context.cxx: In member function ‘void OpenGl_Context::MemoryInfo(TColStd_IndexedDataMapOfStringString&) const’:
../../../../src/OpenGl/OpenGl_Context.cxx:1821:100: error: ‘False’ was not declared in this scope
 1821 |     if (myFuncs->glXQueryCurrentRendererIntegerMESA (GLX_RENDERER_VIDEO_MEMORY_MESA, &aVMemMiB) != False)
      |                                                                                                    ^~~~~
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberN/A

Activities

git

2022-05-15 01:12

administrator   ~0108423

Branch CR32970 has been created by kgv.

SHA-1: 6036998511a7b54b3d05e3b63953d2e59c244350


Detailed log of new commits:

Author: kgv
Date: Sun May 15 01:11:06 2022 +0300

    0032970: Visualization, TKOpenGl - fix compilation on Linux: 'False' was not declared

afokin

2022-05-21 11:09

administrator   ~0108534

Combination -
OCCT branch : IR-2022-05-20
master SHA - 84d39c06fa79d4227c1bc415e36e3924f7ff64c6
49e51745631c52b6c452c65adae4d6dfa21a1b1e
Products branch : IR-2022-05-20 SHA - 17cda8130dd822da7e07127476a2902326a00742
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 18673.29000000065 / 18725.070000000575 [-0.28%]
Products
Total CPU difference: 11729.870000000092 / 11731.410000000136 [-0.01%]
Windows-64-VC14:
OCCT
Total CPU difference: 20661.390625 / 20657.984375 [+0.02%]
Products
Total CPU difference: 13282.171875 / 13258.375 [+0.18%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2023-01-21 17:16

administrator   ~0112916

Branch CR32970 has been deleted by vglukhik.

SHA-1: 6036998511a7b54b3d05e3b63953d2e59c244350

Related Changesets

occt: master 60369985

2022-05-15 01:11:06

kgv

Details Diff
0032970: Visualization, TKOpenGl - fix compilation on Linux: 'False' was not declared Affected Issues
0032970
mod - src/OpenGl/OpenGl_Context.cxx Diff File

Issue History

Date Modified Username Field Change
2022-05-15 01:09 kgv New Issue
2022-05-15 01:09 kgv Assigned To => kgv
2022-05-15 01:10 kgv Summary Visualization, TKOpenGl - fix compilation on Linux => Visualization, TKOpenGl - fix compilation on Linux: 'False' was not declared
2022-05-15 01:12 git Note Added: 0108423
2022-05-15 01:14 kgv Assigned To kgv => bugmaster
2022-05-15 01:14 kgv Severity minor => trivial
2022-05-15 01:14 kgv Test case number => N/A
2022-05-15 01:14 kgv Status new => resolved
2022-05-15 01:14 kgv Status resolved => reviewed
2022-05-21 11:09 afokin Status reviewed => tested
2022-05-21 11:09 afokin Note Added: 0108534
2022-05-21 11:45 kgv Changeset attached => occt master 60369985
2022-05-21 11:45 kgv Assigned To bugmaster => kgv
2022-05-21 11:45 kgv Status tested => verified
2022-05-21 11:45 kgv Resolution open => fixed
2022-10-19 15:50 smoskvin Assigned To kgv => vpozdyayev
2023-01-21 17:16 git Note Added: 0112916
2023-03-19 23:20 vglukhik Status verified => closed
2023-03-19 23:20 vglukhik Fixed in Version => 7.6.3