0032970: Visualization, TKOpenGl - fix compilation on Linux: 'False' was not declared